Switching to Java 17, newer version of Ember that exposes Ember BOM